--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 <body>
     <h1>My Portfolio Website</h1>
     <hr />
-    <a href="./public/movie_ranking.html" style="font-family: 'Times New Roman', Times, serif;">My Fav Movies</a>
+    <h2><a href="./public/movie_ranking.html" style="font-family: 'Times New Roman', Times, serif;">My Fav Movies</a></h2>
     <br />
-    <img src="./assests/images/movie_ranking.png" width="100" height="100" alt="Movie Ranking website image">
+    <img src="./assests/images/movie_ranking.png" width="200" height="200" alt="Movie Ranking website image">
     <br />
-    <a href="./public/recipe_page.html" style="font-family: 'Times New Roman', Times, serif;">My Recipe blog</a>
+    
+    <h2><a href="./public/recipe_page.html" style="font-family: 'Times New Roman', Times, serif;">My Recipe blog</a></h2>
     <br />
-    <img src="./assests/images/recipe_page.png" width="100" height="100" alt="Recipe blog image">
+    <img src="./assests/images/recipe_page.png" width="200" height="200" alt="Recipe blog image">
     <br />
     <hr />
     <a href="./public/about.html" style="font-size: small;font-style: italic;">About</a>
